fix question counter overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,7 +334,7 @@ footer .total-questions div:first-child {
     
     .quiz-box{
         margin: 30px auto 0;
-        height: 80%;
+        height: 75%;
     }
 
     .info-box .info-title {
